Use display name as filename suggestion for saving

BUG: 257790