mobile/calendar/korganizer-mobile.qml
@@ -507,7 +507,7 @@ KPIM.MainView {
           }
 
           onSaveAttachment: {
-            application.saveAttachment(url);
+            application.saveAttachment(url, fileName);
           }
         }
       ]
