mobile/mail/kmail-mobile.qml
@@ -489,7 +489,7 @@ KPIM.MainView {
           }
 
           onSaveAttachment: {
-            application.saveAttachment(url);
+            application.saveAttachment(url, fileName);
           }
         }
       ]
